2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (gtk_icon_theme_init): Look up icon themes in the 
	directories specified in the icon theme spec: $HOME/.icons, 
	$XDG_DATA_DIRS/icons, /usr/share/pixmaps. Note that GTK+ used to also look 
	in $GTK_DATA_DIR/icons, $GTK_DATA_DIR/pixmaps and /usr/share/icons.  (#148694)
	

	* gtk/gtkframe.c (gtk_frame_paint): Take widget->state into account when
	painting the shadows.  (#150351, Tim Janik)

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/abicheck.sh: No need for INCLUDE_INTERNAL_SYMBOLS anymore.

	* gdk/gdk.symbols: Don't use #if defined().

	* gdk/Makefile.am (gdkalias.h): 
	* gtk/Makefile.am (gtkalias.h): Don't use cpp to filter gtk.symbols.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Move the #ifdef processing into the perl script, and
	keep the #ifdefs which differentiate between platforms.

	* gtk/Makefile.am (gtk_private_h_sources): Remove gtkinternals.h, it is no 
	longer needed.

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* tests/testfilechooserbutton.c: Use g_message() throughout, add RTL envar for
	rtl testing.

	* gtk/gtkfilechooserbutton.c: Get rid of HAVE_CONFIG_H.
	(gtk_file_chooser_button_init): Use gtk_drag_dest_add_text_targets().
	(gtk_file_chooser_button_drag_data_received): Use gtk_selection_data_get_text().
	(gtk_file_chooser_button_set_dialog): _gtk_file_chooser_entry_set_base_folder()
	seems to expect a path, not an uri.
	(update_dialog): Handle g_filename_from_uri() returning NULL, don't free
	info if it is NULL. 

	* gtk/gtkfilechooserbutton.h: Minor stylistic changes.

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.[hc]: New widget to go along with 
	GtkFontButton and GtkColorButton for use in preference dialogs.
	Replaces GnomeFileEntry.  (#148108, James M. Cape)

	* gtk/gtk.h: Include gtkfilechooserbutton.h

	* gtk/Makefile.am (gtk_public_h_sources): Add gtkfilechooserbutton.h